content/site.css
html, body {
    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
}

#no-localstorage-message, html.no-js #no-localstorage-message {
    display: none;
}

body#no-localstorage #no-localstorage-message {
    display: inherit;
}

html.js #no-js-message {
    display: none;
}

html.no-js .js {
    display: none;
}

#schedule-tables table {
    margin: 1em 0px;
    border-top: 2px solid #000;
    border-right: 1px solid #000;
    border-bottom: 2px solid #000;
    border-left: 1px solid #000;
    width: 100%;
}
#schedule-tables table thead {
    background-color: #000;
    color: #fff;
}
#schedule-tables table tfoot, table tfoot .table-title {
    background-color: #444;
    color: #fff;
}

#schedule-tables .table-title {
    background-color: #000;
    border-right: 1px solid black;
    color: #fff;
    font-size: 0.8em;
    font-weight: bold;
    width: 3em;
}
#schedule-tables .table-header {
    border-right: 1px solid #000;
    font-weight: bold;
    padding: 0 3px;
    text-align: center;
}

#schedule-tables table tbody tr, table thead tr {
    border-bottom: 1px solid #000;
}

#schedule-tables table tbody .row-item.row-item-single {
    background-color: #FCE883;
}

#schedule-tables.ready table tbody .row-item.selected-row-item {
    background-color: #71BC78;
}

#schedule-tables table tbody .row-item-label {
    background-color: #ccc;
    border-right: 1px solid #000;
    font-size: 0.9em;
}

#schedule-tables tfoot {
    font-size: 0.8em;
}

.row-item {
    cursor: pointer;
    padding: 0 3px;
    position: relative;
    text-align: center;
    vertical-align: middle;
}

.row-item:not(:first-child):not(:last-child) {
    border-left: 1px solid #000;
    border-right: 1px solid #000;
}

.item-title {
    padding-bottom: 1em;
}

.item-speaker {
    font-size: 0.8em;
    padding-right: 0.25em;
    position: absolute;
    bottom: 0;
    right: 0;
}

.row-item-single {
    cursor: inherit;
}

#schedule-tables.ready table tr.has-selected-item .row-item:not(.selected-row-item) {
    color: #555;
}

body.no-localstorage #bottom-toolbar #reset-choices {
    display: none;
}

footer {
    background-color: #000;
    color: #fff;
    font-size: 0.9em;
    margin-top: 0.5em;
    padding: 10px;
}
footer a, footer a:hover, footer a:active, footer a:visited {
    color: #88f;
}

html.js #messages div {
    cursor: pointer;
    padding: 0px;
}
html.js #messages div p {
    border: 1px dashed #000000;
    padding: 5px;
    margin: 0px;
}

#ad {
    padding-bottom: 0.5em;
    padding-top: 0.5em;
}

#ad .media-body {
    display: table-cell;
    vertical-align: middle;
}

@media screen and (max-width: 1024px) {
    body{
        font-size: 0.85em;
    }
}

@media screen and (max-width: 768px) {
    body{
        font-size: 0.8em;
    }
}

@media screen and (max-width: 640px) {
    body{
        font-size: 0.7em;
    }
    header {
        text-align: center;
    }
    .schedule-table {
        padding-left: 0;
        padding-right: 0;
    }
}

@media screen and (max-width: 320px) {
    body{
        font-size: 0.6em;
    }

    #site-head {
        font-size: 33px;
    }
}

